--- a/index.html
+++ b/index.html
@@ -11,6 +11,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <header> <!-- header -->
+        <div class="d-flex j-between alin-it">
+            <div class="d-flex alin-it trasparente open-sansus margin-20">
+                <img src="./img/logo-small.png" alt="" height="25px">
+                <button class="trasparente margin-20">Perchè Dropbox</button>
+                <Button class="trasparente margin-20">Funzioni</Button>
+                <Button class="trasparente margin-20">Piani e prezzi</Button>
+            </div>
+            <div>
+                <button class="trasparente margin-20">Supporto</button>
+                <Button class="trasparente margin-20">Contatta ufficio vendite</Button>
+                <Button class="trasparente margin-20">Accedi</Button>
+                <Button class="bcolor-blu color-white margin-20">Inizia</Button>
+            <div>
+        </div>
+    </header>
+    <main> <!-- main -->
+
+
+    </main>
+    <footer> <!-- footer -->
+
+    </footer>
 </body>
 </html>
