--- a/index.html
+++ b/index.html
@@ -23,11 +23,38 @@
                 <button class="trasparente margin-20">Supporto</button>
                 <Button class="trasparente margin-20">Contatta ufficio vendite</Button>
                 <Button class="trasparente margin-20">Accedi</Button>
-                <Button class="bcolor-blu color-white margin-20">Inizia</Button>
+                <Button class="bcolor-blu color-white margin-20 padding-10">Inizia</Button>
             <div>
         </div>
     </header>
-    <main> <!-- main -->
+    <main class="d-flex j-centre margin-20 alin-it wrap "> <!-- main -->
+        <div class="container d-flex j-centre alin-it wrap n-position margind-b-60">
+            <div class="content1 d-flex j-centre bcolor-blu wrap ">
+                <h1 class="open-sansus font-title">
+                    Tutto ciò che ti serve per il 
+                    <br>
+                    lavoro, in un unico posto
+                </h1>
+            </div>
+            <div class="content d-flex bcolor-red wrap r-position-txt"> 
+                Finalmente  tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Droppbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso  di lavoro esistente.
+                <Button class="bcolor-blu color-white margin-20  padding-10">Inizia la tua prova gratuita</Button>
+                <p class=" margin-40 t-alin-l">
+                    <br>
+                    <div class="content-space">
+                    </div>
+                    <div>
+                        annulla in qualsiasi momento
+                        <div class="margin-20 font-s r-position-arrow">&#129035;</div>
+                    </div>
+                    
+                </p>
+            </div>
+            <div class="content d-flex r-position wra"> 
+                <img src="./img/jumbo.png" alt="" width="540px" height="350px" >
+                
+            </div>   
+        </div>
 
 
     </main>
