--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="content d-flex bcolor-red wrap r-position-txt"> 
                          Finalmente  tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Droppbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso  di lavoro esistente.
-                         <Button class="bcolor-blu color-white margin-20  padding-10">Inizia la tua prova gratuita</Button>
+                         <Button class="bcolor-blu color-white margin-20 padding-10">Inizia la tua prova gratuita</Button>
                         <p class=" margin-40 t-alin-l">
                         <br>
                         <div class="content-space"></div>
@@ -60,20 +60,136 @@
             <div class="d-flex j-centre alin-it wrap content1 margin d-top-80 bcolor-pink">
                 <div class="conteiner max-width d-flex j-content alin-it wrap bcolor-green open-sansus font-text">
                     <div class="bcolor-green content1 d-flex alin-it wrap margind-top-80">
-                        <ul>
-                            <li>
-                                <h2>Trova il piano business che fa per te</h2>
+                        <ul class="list-style-none">
+                            <li >
+                                <h2 class="list-style-none">Trova il piano business che fa per te</h2>
                             </li>
                             <li class="d-flex alin-it wrap">
-                                <p>Fatturazione mensile</p>
+                                <p class="padding-top-right-bottom">Fatturazione mensile</p>
                                 <p>Fatturazione annuale</p>
                             </li>
                         </ul>
                     </div>
-                    <div class="bcolor-red content-space d-flex j-centre alin-it">Singolo</div>
-                    <div class="b-jumbo content-space d-flex j-centre alin-it">Team</div>
-                    <div class="bcolor-grey content-space d-flex j-centre alin-it">Azienda</div>
+                    <div class="bcolor-red content-space d-flex j-centre alin-it border">Singolo</div>
+                    <div class="b-jumbo content-space d-flex j-centre alin-it border">Team</div>
+                    <div class="bcolor-grey content-space d-flex j-centre alin-it border">Azienda</div>
+                    <ul class="border content-space1 list-style-none" >
+                        <li>
+                            <h3 class="bcolor-red content-space1 d-flex alin-it">Professional</h3>
+                        </li>
+                        <li class="margin-top-30">
+                            €12.00
+                        </li>
+                        <li class="color-grey margin-top-30">
+                            /mese
+                        </li>
+                        <li class="margin-top-30">
+                            1 utente
+                        </li>
+                        <li class="margin-top-10">
+                            5TB di spazio di archiviazione
+                        </li>
+                        <li class="margin-top-10">
+                            Funzioni di produttività premium
+                            <br>
+                            e condivisione file semplice e sicura
+                        </li>
+                        <li class="margin-top-30">
+                            <button class="bcolor-blu color-white margin-20 padding-10"> Prova gratis per 30 giorni</button>
+                        </li>
+                        <li class="margin-top-30">
+                            <span class="border-bottom padding-b">oppure</span>
+                            <span class="color-blue">acquista ora</span>
+                        </li>
+                        <li class="margin-top-30">
+                            <p class="margin-top-80" >punti salienti del piano</p>
+                        </li>
+                        <li class="margin-top-10">
+                            invia file fino a 100 gb con dropbox transfert
+                        </li>
+                        <li class="margin-top-10">
+                            Cartelle offline ssu dispositivi mobili
+                        </li>
+                    </ul>
+                    <ul class="border content-space1 list-style-none" >
+                        <li>
+                            <h3 class="b-jumbo content-space1 d-flex alin-it">Advanced</h3>
+                        </li>
+                        <li class="margin-top-30">
+                            €12.00
+                        </li>
+                        <li class="color-grey margin-top-30">
+                            /mese
+                        </li>
+                        <li class="margin-top-30">
+                            1 utente
+                        </li>
+                        <li class="margin-top-10">
+                            5TB di spazio di archiviazione
+                        </li>
+                        <li class="margin-top-10">
+                            Funzioni di produttività premium
+                            <br>
+                            e condivisione file semplice e sicura
+                        </li>
+                        <li class="margin-top-30">
+                            <button class="bcolor-blu color-white margin-20 padding-10"> Prova gratis per 30 giorni</button>
+                        </li>
+                        <li class="margin-top-30">
+                            <span class="border-bottom padding-b">oppure</span>
+                            <span class="color-blue">acquista ora</span>
+                        </li>
+                        <li class="margin-top-30">
+                            <p class="margin-top-80" >punti salienti del piano</p>
+                        </li>
+                        <li class="margin-top-10">
+                            invia file fino a 100 gb con dropbox transfert
+                        </li>
+                        <li class="margin-top-10">
+                            Cartelle offline ssu dispositivi mobili
+                        </li>
+                    </ul>
+                    <ul class="border content-space1 list-style-none" >
+                        <li>
+                            <h3 class="bcolor-grey content-space1 d-flex alin-it">Enterprise</h3>
+                        </li>
+                        <li class="margin-top-30">
+                            €12.00
+                        </li>
+                        <li class="color-grey margin-top-30">
+                            /mese
+                        </li>
+                        <li class="margin-top-30">
+                            1 utente
+                        </li>
+                        <li class="margin-top-10">
+                            5TB di spazio di archiviazione
+                        </li>
+                        <li class="margin-top-10">
+                            Funzioni di produttività premium
+                            <br>
+                            e condivisione file semplice e sicura
+                        </li>
+                        <li class="margin-top-30">
+                            <button class="bcolor-blu color-white margin-20 padding-10"> Prova gratis per 30 giorni</button>
+                        </li>
+                        <li class="margin-top-30">
+                            <span class="border-bottom padding-b">oppure</span>
+                            <span class="color-blue">acquista ora</span>
+                        </li>
+                        <li class="margin-top-30">
+                            <p class="margin-top-80" >punti salienti del piano</p>
+                        </li>
+                        <li class="margin-top-10">
+                            invia file fino a 100 gb con dropbox transfert
+                        </li>
+                        <li class="margin-top-10">
+                            Cartelle offline ssu dispositivi mobili
+                        </li>
+                    </ul>
+
                     <div class="bcolor-pink content1 d-flex j-centre alin-it">Team</div>
+                    <h3 class="bcolor-pink content1 d-flex j-centre alin-it">Enterprise</h3>
                     <div class="bcolor-red content1 margind-top-80 d-flex"><!--secondo-->
                         <div class="content2 padding-0">
                             metti una immagine qui<!-- problema di immagine che andrebbe inserita qui-->
@@ -83,9 +199,9 @@
                         </div>   
                     </div><!--terzo-->
                     <div class="bcolor-green content1 d-flex alin-it wrap margind-top-80">
-                        <ul>
+                        <ul class="list-style-none">
                             <li>
-                                <h2>Esegui più operazioni con dropbox Business</h2>
+                                <h2 class="list-style-none">Esegui più operazioni con dropbox Business</h2>
                             </li>
                         </ul>
                     </div>
