--- a/index.html
+++ b/index.html
@@ -73,121 +73,130 @@
                     <div class="bcolor-red content-space d-flex j-centre alin-it border">Singolo</div>
                     <div class="b-jumbo content-space d-flex j-centre alin-it border">Team</div>
                     <div class="bcolor-grey content-space d-flex j-centre alin-it border">Azienda</div>
-                    <ul class="border content-space1 list-style-none" >
-                        <li>
-                            <h3 class="bcolor-red content-space1 d-flex alin-it">Professional</h3>
-                        </li>
-                        <li class="margin-top-30">
-                            €12.00
-                        </li>
-                        <li class="color-grey margin-top-30">
-                            /mese
-                        </li>
-                        <li class="margin-top-30">
-                            1 utente
-                        </li>
-                        <li class="margin-top-10">
-                            5TB di spazio di archiviazione
-                        </li>
-                        <li class="margin-top-10">
-                            Funzioni di produttività premium
-                            <br>
-                            e condivisione file semplice e sicura
-                        </li>
-                        <li class="margin-top-30">
-                            <button class="bcolor-blu color-white margin-20 padding-10"> Prova gratis per 30 giorni</button>
-                        </li>
-                        <li class="margin-top-30">
-                            <span class="border-bottom padding-b">oppure</span>
-                            <span class="color-blue">acquista ora</span>
-                        </li>
-                        <li class="margin-top-30">
-                            <p class="margin-top-80" >punti salienti del piano</p>
-                        </li>
-                        <li class="margin-top-10">
-                            invia file fino a 100 gb con dropbox transfert
-                        </li>
-                        <li class="margin-top-10">
-                            Cartelle offline ssu dispositivi mobili
-                        </li>
-                    </ul>
-                    <ul class="border content-space1 list-style-none" >
-                        <li>
-                            <h3 class="b-jumbo content-space1 d-flex alin-it">Advanced</h3>
-                        </li>
-                        <li class="margin-top-30">
-                            €12.00
-                        </li>
-                        <li class="color-grey margin-top-30">
-                            /mese
-                        </li>
-                        <li class="margin-top-30">
-                            1 utente
-                        </li>
-                        <li class="margin-top-10">
-                            5TB di spazio di archiviazione
-                        </li>
-                        <li class="margin-top-10">
-                            Funzioni di produttività premium
-                            <br>
-                            e condivisione file semplice e sicura
-                        </li>
-                        <li class="margin-top-30">
-                            <button class="bcolor-blu color-white margin-20 padding-10"> Prova gratis per 30 giorni</button>
-                        </li>
-                        <li class="margin-top-30">
-                            <span class="border-bottom padding-b">oppure</span>
-                            <span class="color-blue">acquista ora</span>
-                        </li>
-                        <li class="margin-top-30">
-                            <p class="margin-top-80" >punti salienti del piano</p>
-                        </li>
-                        <li class="margin-top-10">
-                            invia file fino a 100 gb con dropbox transfert
-                        </li>
-                        <li class="margin-top-10">
-                            Cartelle offline ssu dispositivi mobili
-                        </li>
-                    </ul>
-                    <ul class="border content-space1 list-style-none" >
-                        <li>
-                            <h3 class="bcolor-grey content-space1 d-flex alin-it">Enterprise</h3>
-                        </li>
-                        <li class="margin-top-30">
-                            €12.00
-                        </li>
-                        <li class="color-grey margin-top-30">
-                            /mese
-                        </li>
-                        <li class="margin-top-30">
-                            1 utente
-                        </li>
-                        <li class="margin-top-10">
-                            5TB di spazio di archiviazione
-                        </li>
-                        <li class="margin-top-10">
-                            Funzioni di produttività premium
-                            <br>
-                            e condivisione file semplice e sicura
-                        </li>
-                        <li class="margin-top-30">
-                            <button class="bcolor-blu color-white margin-20 padding-10"> Prova gratis per 30 giorni</button>
-                        </li>
-                        <li class="margin-top-30">
-                            <span class="border-bottom padding-b">oppure</span>
-                            <span class="color-blue">acquista ora</span>
-                        </li>
-                        <li class="margin-top-30">
-                            <p class="margin-top-80" >punti salienti del piano</p>
-                        </li>
-                        <li class="margin-top-10">
-                            invia file fino a 100 gb con dropbox transfert
-                        </li>
-                        <li class="margin-top-10">
-                            Cartelle offline ssu dispositivi mobili
-                        </li>
-                    </ul>
-
+                    <div class="conteiner max-width d-flex j-content  wrap alin-strech bcolor-green open-sansus font-text">
+                        <ul class="border content-space1 list-style-none" >
+                            <li>
+                                <h3 class="bcolor-red content-space1 d-flex alin-it">Professional</h3>
+                            </li>
+                            <li class="margin-top-30">
+                                €12.00
+                            </li>
+                            <li class="color-grey margin-top-30">
+                                /mese
+                            </li>
+                            <li class="margin-top-30">
+                                1 utente
+                            </li>
+                            <li class="margin-top-10">
+                                5TB di spazio di archiviazione
+                            </li>
+                            <li class="margin-top-10">
+                                Funzioni di produttività premium
+                                <br>
+                                e condivisione file semplice e sicura
+                            </li>
+                            <li class="margin-top-30">
+                                <button class="bcolor-blu color-white margin-20 padding-10"> Prova gratis per 30 giorni</button>
+                            </li>
+                            <li class="margin-top-30">
+                                <span class="border-bottom padding-b">oppure</span>
+                                <span class="color-blue">acquista ora</span>
+                            </li>
+                            <li class="margin-top-30">
+                                <p class="margin-top-80" >punti salienti del piano</p>
+                            </li>
+                            <li class="margin-top-10">
+                                invia file fino a 100 gb con dropbox transfert
+                            </li>
+                            <li class="margin-top-10">
+                                Cartelle offline ssu dispositivi mobili
+                            </li>
+                        </ul>
+                        <ul class="border content-space1 list-style-none" >
+                            <li>
+                                <h3 class="b-jumbo content-space1 d-flex alin-it">Advanced</h3>
+                            </li>
+                            <li class="margin-top-30">
+                                €12.00
+                            </li>
+                            <li class="color-grey margin-top-30">
+                                /mese
+                            </li>
+                            <li class="margin-top-30">
+                                1 utente
+                            </li>
+                            <li class="margin-top-10">
+                                5TB di spazio di archiviazione
+                            </li>
+                            <li class="margin-top-10">
+                                Funzioni di produttività premium
+                                <br>
+                                e condivisione file semplice e sicura
+                            </li>
+                            <li class="margin-top-30">
+                                <button class="bcolor-blu color-white margin-20 padding-10"> Prova gratis per 30 giorni</button>
+                            </li>
+                            <li class="margin-top-30">
+                                <span class="border-bottom padding-b">oppure</span>
+                                <span class="color-blue">acquista ora</span>
+                            </li>
+                            <li class="margin-top-30">
+                                <p class="margin-top-80" >punti salienti del piano</p>
+                            </li>
+                            <li class="margin-top-10">
+                                invia file fino a 100 gb con dropbox transfert
+                            </li>
+                            <li class="margin-top-10">
+                                Cartelle offline ssu dispositivi mobili
+                            </li>
+                            <li class="margin-top-10">
+                                Cartelle offline ssu dispositivi mobili
+                            </li><li class="margin-top-10">
+                                Cartelle offline ssu dispositivi mobili
+                            </li>
+                        </ul>
+                        <ul class="border content-space1 list-style-none" >
+                            <li>
+                                <h3 class="bcolor-grey content-space1 d-flex alin-it">Enterprise</h3>
+                            </li>
+                            <li class="margin-top-30">
+                                €12.00
+                            </li>
+                            <li class="color-grey margin-top-30">
+                                /mese
+                            </li>
+                            <li class="margin-top-30">
+                                1 utente
+                            </li>
+                            <li class="margin-top-10">
+                                5TB di spazio di archiviazione
+                            </li>
+                            <li class="margin-top-10">
+                                Funzioni di produttività premium
+                                <br>
+                                e condivisione file semplice e sicura
+                            </li>
+                            <li class="margin-top-30">
+                                <button class="bcolor-blu color-white margin-20 padding-10"> Prova gratis per 30 giorni</button>
+                            </li>
+                            <li class="margin-top-30">
+                                <span class="border-bottom padding-b">oppure</span>
+                                <span class="color-blue">acquista ora</span>
+                            </li>
+                            <li class="margin-top-30">
+                                <p class="margin-top-80" >punti salienti del piano</p>
+                            </li>
+                            <li class="margin-top-10">
+                                invia file fino a 100 gb con dropbox transfert
+                            </li>
+                            <li class="margin-top-10">
+                                Cartelle offline ssu dispositivi mobili
+                            </li>
+                            <li class="margin-top-10">
+                                Cartelle offline ssu dispositivi mobili
+                            </li>
+                        </ul>    
+                    </div>
                     <div class="bcolor-pink content1 d-flex j-centre alin-it">Team</div>
                     <h3 class="bcolor-pink content1 d-flex j-centre alin-it">Enterprise</h3>
                     <div class="bcolor-red content1 margind-top-80 d-flex"><!--secondo-->
