[UPD] flex done

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main class="f-column" ><!--jumbo-->
         <div>
             <div class="d-flex j-centre alin-it wrap b-jumbo content1">
-                <div class="container max-width d-flex j-centre alin-it wrap n-position margind-b-60">
+                <div class="container max-width-j d-flex j-centre alin-it wrap n-position margind-b-60">
                     <div class="content1 d-flex j-centre bcolor-blu wrap ">
                         <h1 class="open-sansus font-title">
                             Tutto ciò che ti serve per il 
@@ -38,7 +38,7 @@
                             lavoro, in un unico posto
                         </h1>
                     </div>
-                    <div class="content d-flex bcolor-red wrap r-position-txt"> 
+                    <div class="content-space d-flex bcolor-red wrap r-position-txt"> 
                          Finalmente  tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Droppbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso  di lavoro esistente.
                          <Button class="bcolor-blu color-white margin-20 padding-10">Inizia la tua prova gratuita</Button>
                         <p class=" margin-40 t-alin-l">
@@ -50,8 +50,8 @@
                         </div>
                     </p>
                 </div>
-                <div class="content d-flex r-position wra"> 
-                    <img src="./img/jumbo.png" alt="" width="540px" height="350px" >
+                <div class="content2 d-flex r-position wra"> 
+                    <img src="./img/jumbo.png" alt="" width="640px" height="350px" >
                 </div>   
             </div> <!--primo-->
             <hr>
@@ -255,16 +255,59 @@
                 </div>
             </div>
         </div>
-        
-        
-
-
     </main>
-    <section></section>
-
-
     <footer> <!-- footer -->
-
+        <div>
+            <div class="d-flex j-centre alin-it wrap content1 margin d-top-80 bcolor-black">
+                <div class="conteiner max-width d-flex j-content alin-it wrap bcolor-green open-sansus font-text">
+                    <div class="bcolor-red content1 color-white d-flex j-content alin-it wrap margind-top-80 padding-left-right">
+                        <ul class="list-style-none padding-top-right-bottom-40">
+                            <li class="margin-top-10"><h3>Dropbox</h3></li>
+                            <li class="margin-top-10">applicazione</li>
+                            <li class="margin-top-10">perchè drop</li>
+                            <li class="margin-top-10">piani</li>
+                            <li class="margin-top-10">sicurezza</li>
+                            <li class="margin-top-10">funzioni</li>
+                        </ul>
+                        <ul class="list-style-none padding-top-right-bottom-40">
+                            <li class="margin-top-10"><h3>Prodotti</h3></li>
+                            <li class="margin-top-10">applicazione</li>
+                            <li class="margin-top-10">perchè drop</li>
+                            <li class="margin-top-10">piani</li>
+                            <li class="margin-top-10">sicurezza</li>
+                            <li class="margin-top-10">funzioni</li>
+                        </ul>
+                        <ul class="list-style-none padding-top-right-bottom-40">
+                            <li class="margin-top-10"><h3>Azienda</h3></li>
+                            <li class="margin-top-10">applicazione</li>
+                            <li class="margin-top-10">perchè drop</li>
+                            <li class="margin-top-10">piani</li>
+                            <li class="margin-top-10">sicurezza</li>
+                            <li class="margin-top-10">funzioni</li>
+                        </ul>
+                        <ul class="list-style-none padding-top-right-bottom-40">
+                            <li class="margin-top-10"><h3>Supporto</h3></li>
+                            <li class="margin-top-10">applicazione</li>
+                            <li class="margin-top-10">perchè drop</li>
+                            <li class="margin-top-10">piani</li>
+                            <li class="margin-top-10">sicurezza</li>
+                            <li class="margin-top-10">funzioni</li>
+                        </ul>
+                        <ul class="list-style-none padding-top-right-bottom-40">
+                            <li class="margin-top-10"><h3>Community</h3></li>
+                            <li class="margin-top-10">applicazione</li>
+                            <li class="margin-top-10">perchè drop</li>
+                            <li class="margin-top-10">piani</li>
+                            <li class="margin-top-10">sicurezza</li>
+                            <li class="margin-top-10">funzioni</li>
+                        </ul>
+                        <div class="bcolor-blu color-white content1 d-flex alin-it margind-top-80">
+                            <button class="trasparente padding-top-right-bottom border-top">Italiano</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
