--- a/index.html
+++ b/index.html
@@ -65,16 +65,22 @@
                                 <h2 class="list-style-none">Trova il piano business che fa per te</h2>
                             </li>
                             <li class="d-flex alin-it wrap">
-                                <p class="padding-top-right-bottom">Fatturazione mensile</p>
-                                <p>Fatturazione annuale</p>
+                                <p class="padding-top-right-bottom"> 
+                                    <input type="radio">
+                                    Fatturazione mensile
+                                </p>
+                                <p>
+                                    <input type="radio">
+                                    Fatturazione annuale
+                                </p>
                             </li>
                         </ul>
                     </div>
                     <div class="bcolor-red content-space d-flex j-centre alin-it border">Singolo</div>
-                    <div class="b-jumbo content-space d-flex j-centre alin-it border">Team</div>
-                    <div class="bcolor-grey content-space d-flex j-centre alin-it border">Azienda</div>
+                    <div class="b-jumbo content-space d-flex j-centre alin-it border"><i class="fa-regular fa-user"></i>Team</div>
+                    <div class="bcolor-grey content-space d-flex j-centre alin-it border"> <i class="fa-regular fa-building"></i>Azienda</div>
                     <div class="conteiner max-width d-flex j-content  wrap alin-strech bcolor-green open-sansus font-text">
-                        <ul class="border content-space1 list-style-none" >
+                        <ul class="border content-space1 list-style-none">
                             <li>
                                 <h3 class="bcolor-red content-space1 d-flex alin-it">Professional</h3>
                             </li>
@@ -85,12 +91,15 @@
                                 /mese
                             </li>
                             <li class="margin-top-30">
+                                <i class="fa-regular fa-user"></i>
                                 1 utente
                             </li>
                             <li class="margin-top-10">
+                                <i class="fa-regular fa-folder-closed"></i>
                                 5TB di spazio di archiviazione
                             </li>
-                            <li class="margin-top-10">
+                            <li class="margin-top-10 card-before">
+                                
                                 Funzioni di produttività premium
                                 <br>
                                 e condivisione file semplice e sicura
@@ -126,10 +135,11 @@
                                 1 utente
                             </li>
                             <li class="margin-top-10">
+                                <i class="fa-regular fa-folder-closed"></i>
                                 5TB di spazio di archiviazione
                             </li>
                             <li class="margin-top-10">
-                                Funzioni di produttività premium
+                                <i class="fa-solid fa-circle-nodes"></i> Funzioni di produttività premium
                                 <br>
                                 e condivisione file semplice e sicura
                             </li>
@@ -166,12 +176,15 @@
                                 /mese
                             </li>
                             <li class="margin-top-30">
+                                <i class="fa-regular fa-user"></i>
                                 1 utente
                             </li>
                             <li class="margin-top-10">
+                                <i class="fa-regular fa-folder-closed"></i>
                                 5TB di spazio di archiviazione
                             </li>
                             <li class="margin-top-10">
+                                <i class="fa-solid fa-circle-nodes"></i>
                                 Funzioni di produttività premium
                                 <br>
                                 e condivisione file semplice e sicura
@@ -198,7 +211,7 @@
                         </ul>    
                     </div class="border">
                         <div>
-                            <div class="bcolor-pink border content1 d-flex j-centre alin-it margin-top-30">Team</div>
+                            <div class="bcolor-pink border content1 d-flex j-centre alin-it margin-top-30"><i class="fa-regular fa-building"></i>Team</div>
                         <div class="bcolor-blur content1 d-flex j-between">
                             <ul class="bcolor-red border1  content1 d-flex j-between alin-it list-style-none">
                                 <li>
@@ -301,8 +314,11 @@
                             <li class="margin-top-10">sicurezza</li>
                             <li class="margin-top-10">funzioni</li>
                         </ul>
-                        <div class="bcolor-blu color-white content1 d-flex alin-it margind-top-80">
-                            <button class="trasparente padding-top-right-bottom border-top">Italiano</button>
+                        <div class="bcolor-blu color-white content1 d-flex  alin-it margind-top-80">
+                            <div><i class="fa-solid fa-globe"></i></div>
+                            <button class="trasparente border-top padding-top-right-bottom color-white">
+                                Italiano &#11205;
+                            </button>
                         </div>
                     </div>
                 </div>
