--- a/index.html
+++ b/index.html
@@ -112,12 +112,15 @@
                                 <span class="color-blue">acquista ora</span>
                             </li>
                             <li class="margin-top-30">
+                                <span class="color-blue">&#x2713;</span>
                                 <p class="margin-top-80" >punti salienti del piano</p>
                             </li>
                             <li class="margin-top-10">
+                                <span class="color-blue">&#x2713;</span>
                                 invia file fino a 100 gb con dropbox transfert
                             </li>
                             <li class="margin-top-10">
+                                <span class="color-blue">&#x2713;</span>
                                 Cartelle offline ssu dispositivi mobili
                             </li>
                         </ul>
@@ -151,17 +154,24 @@
                                 <span class="color-blue">acquista ora</span>
                             </li>
                             <li class="margin-top-30">
-                                <p class="margin-top-80" >punti salienti del piano</p>
+                                <p class="margin-top-80" >
+                                     <span class="color-blue">&#x2713;</span>
+                                      salienti del piano
+                                </p>
                             </li>
                             <li class="margin-top-10">
+                                <span class="color-blue">&#x2713;</span>
                                 invia file fino a 100 gb con dropbox transfert
                             </li>
                             <li class="margin-top-10">
+                                <span class="color-blue">&#x2713;</span>
                                 Cartelle offline ssu dispositivi mobili
                             </li>
                             <li class="margin-top-10">
+                                <span class="color-blue">&#x2713;</span>
                                 Cartelle offline ssu dispositivi mobili
                             </li><li class="margin-top-10">
+                                <span class="color-blue">&#x2713;</span>
                                 Cartelle offline ssu dispositivi mobili
                             </li>
                         </ul>
@@ -197,15 +207,20 @@
                                 <span class="color-blue">acquista ora</span>
                             </li>
                             <li class="margin-top-30">
-                                <p class="margin-top-80" >punti salienti del piano</p>
+                                <p class="margin-top-80" >
+                                    
+                                    <span class="color-blue">&#x2713;</span>punti salienti del piano</p>
                             </li>
                             <li class="margin-top-10">
+                                <span class="color-blue">&#x2713;</span>
                                 invia file fino a 100 gb con dropbox transfert
                             </li>
                             <li class="margin-top-10">
+                                <span class="color-blue">&#x2713;</span>
                                 Cartelle offline ssu dispositivi mobili
                             </li>
                             <li class="margin-top-10">
+                                <span class="color-blue">&#x2713;</span>
                                 Cartelle offline ssu dispositivi mobili
                             </li>
                         </ul>    
