--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Patua+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
     <header> <!-- header -->
         <div class="d-flex j-between alin-it content1">
             <div class="d-flex alin-it trasparente open-sansus margin-20">
-                <img src="./img/logo-small.png" alt="" height="25px">
+                <p><img src="./img/logo-small.png" alt=""></p>
                 <button class="trasparente margin-20">Perchè Dropbox</button>
                 <Button class="trasparente margin-20">Funzioni</Button>
                 <Button class="trasparente margin-20">Piani e prezzi</Button>
@@ -24,7 +24,7 @@
                 <Button class="trasparente margin-20">Contatta ufficio vendite</Button>
                 <Button class="trasparente margin-20">Accedi</Button>
                 <Button class="bcolor-blu color-white margin-20 padding-10">Inizia</Button>
-            <div>
+            </div>
         </div>
     </header> 
     <main class="f-column" ><!--jumbo-->
@@ -41,17 +41,17 @@
                     <div class="content-space d-flex bcolor-red wrap r-position-txt"> 
                          Finalmente  tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Droppbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso  di lavoro esistente.
                          <Button class="bcolor-blu color-white margin-20 padding-10">Inizia la tua prova gratuita</Button>
-                        <p class=" margin-40 t-alin-l">
+                        <p class=" margin-40 t-alin-l"></p>
                         <br>
                         <div class="content-space"></div>
                         <div>
                             annulla in qualsiasi momento
                             <div class="margin-20 font-s r-position-arrow">&#129035;</div>
                         </div>
-                    </p>
+                    </div>
                 </div>
                 <div class="content2 d-flex r-position wra"> 
-                    <img src="./img/jumbo.png" alt="" width="640px" height="350px" >
+                    <p><img src="./img/jumbo.png" alt=""></p>  <!--IMG-->
                 </div>   
             </div> <!--primo-->
             <hr>
@@ -224,8 +224,8 @@
                                 Cartelle offline ssu dispositivi mobili
                             </li>
                         </ul>    
-                    </div class="border">
-                        <div>
+                    </div>
+                        <div class="border2">
                             <div class="bcolor-pink border content1 d-flex j-centre alin-it margin-top-30"><i class="fa-regular fa-building"></i>Team</div>
                         <div class="bcolor-blur content1 d-flex j-between">
                             <ul class="bcolor-red border1  content1 d-flex j-between alin-it list-style-none">
@@ -249,7 +249,7 @@
                     
                     <div class="bcolor-red content1 margind-top-80 d-flex"><!--secondo-->
                         <div class="content2 padding-0">
-                            metti una immagine qui<!-- problema di immagine che andrebbe inserita qui-->
+                            metti una immagine qui                                                                                                                            <!-- problema di immagine che andrebbe inserita qui-->
                         </div>
                         <div class="bcolor-blu content-space d-column j-centre padding-0">
                             <h3 class="margin-10 padding-10">Entra in contatto con un partner Dropbox</h3>
@@ -269,13 +269,13 @@
                     <h3 class="bcolor-pink content-space d-flex j-centre alin-it margin-10 margind-top-80">Passa di meno da uno strumento all'altro</h3>
                     <div class="bcolor-red content-space d-flex j-centre alin-it margin-10">metti una immagine qui</div>
                     <div class="bcolor-red content-space d-flex j-centre alin-it margin-10">metti una immagine qui</div>
-                    <div class="bcolor-red content-space d-flex j-centre alin-it margin-10">metti una immagine qui</div>
+                    <div class="bcolor-red content-space d-flex j-centre alin-it margin-10"> <img src=".//img/business-feature-security.png" alt="" sizes="100%"></div>                                                                   <!-- problema di immagine che andrebbe inserita qui-->
                     <div class="bcolor-grey content-space d-flex j-centre alin-it margin-10">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore illo nesciunt laborum sequi non rerum expedita ipsum earum, sed nostrum autem cupiditate! Incidunt sequi soluta quaerat voluptas. Porro, modi consequuntur?</div>
                     <div class="bcolor-grey content-space d-flex j-centre alin-it margin-10">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore illo nesciunt laborum sequi non rerum expedita ipsum earum, sed nostrum autem cupiditate! Incidunt sequi soluta quaerat voluptas. Porro, modi consequuntur?</div>
                     <div class="bcolor-grey content-space d-flex j-centre alin-it margin-10 ">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore illo nesciunt laborum sequi non rerum expedita ipsum earum, sed nostrum autem cupiditate! Incidunt sequi soluta quaerat voluptas. Porro, modi consequuntur?</div>
                     <!--quarto-->
                     <h2 class="bcolor-blu content1 d-flex alin-it margind-top-80">
-                        Più di  500.00 teeam utilizzano dropbox Business
+                        Più di  500.00 team utilizzano dropbox Business
                     </h2>
                     <div class="bcolor-red color-blue content1 d-flex alin-it margind-top-80">
                     Scopri di più sui nostri clienti
