[FIX] codice pulito

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
     </header> 
-    <main class="f-column" ><!--jumbo-->
+    <main class="f-column"><!--jumbo-->
         <div>
             <div class="d-flex j-centre alin-it wrap b-jumbo content1">
                 <div class="container max-width-j d-flex j-centre alin-it wrap n-position margind-b-60">
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="content2 d-flex r-position wra"> 
-                    <p><img src="./img/jumbo.png" alt=""></p>  <!--IMG-->
+                    <img src="./img/jumbo.png" alt="">                                                                                       <!--IMG-->
                 </div>   
             </div> <!--primo-->
             <hr>
@@ -269,7 +269,7 @@
                     <h3 class="bcolor-pink content-space d-flex j-centre alin-it margin-10 margind-top-80">Passa di meno da uno strumento all'altro</h3>
                     <div class="bcolor-red content-space d-flex j-centre alin-it margin-10">metti una immagine qui</div>
                     <div class="bcolor-red content-space d-flex j-centre alin-it margin-10">metti una immagine qui</div>
-                    <div class="bcolor-red content-space d-flex j-centre alin-it margin-10"> <img src=".//img/business-feature-security.png" alt="" sizes="100%"></div>                                                                   <!-- problema di immagine che andrebbe inserita qui-->
+                    <div class="bcolor-red content-space d-flex j-centre alin-it margin-10"> <img src=".//img/business-feature-security.png" alt=""></div>                                                                   <!-- problema di immagine che andrebbe inserita qui-->
                     <div class="bcolor-grey content-space d-flex j-centre alin-it margin-10">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore illo nesciunt laborum sequi non rerum expedita ipsum earum, sed nostrum autem cupiditate! Incidunt sequi soluta quaerat voluptas. Porro, modi consequuntur?</div>
                     <div class="bcolor-grey content-space d-flex j-centre alin-it margin-10">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore illo nesciunt laborum sequi non rerum expedita ipsum earum, sed nostrum autem cupiditate! Incidunt sequi soluta quaerat voluptas. Porro, modi consequuntur?</div>
                     <div class="bcolor-grey content-space d-flex j-centre alin-it margin-10 ">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore illo nesciunt laborum sequi non rerum expedita ipsum earum, sed nostrum autem cupiditate! Incidunt sequi soluta quaerat voluptas. Porro, modi consequuntur?</div>
