[UPD] Fixed JUmbo

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                             <div class="margin-20 font-s r-position-arrow">&#129035;</div>
                         </div>
                     </div>
-                </div>
-                <div class="content2 d-flex r-position wra"> 
-                    <img src="./img/jumbo.png" alt="">                                                                                       <!--IMG-->
-                </div>   
+                    <div class="content2 d-flex r-position wra"> 
+                        <img src="./img/jumbo.png" alt="" class="content1">                                                                                       <!--IMG-->
+                    </div>  
+                </div> 
             </div> <!--primo-->
             <hr>
         </div>
@@ -230,7 +230,7 @@
                         <div class="bcolor-blur content1 d-flex j-between">
                             <ul class="bcolor-red border1  content1 d-flex j-between alin-it list-style-none">
                                 <li>
-                                    <h3 class=" content1 d-flex j-centre alin-it">Enterprise</h3>
+                                    <h3 class="content1 d-flex j-centre alin-it">Enterprise</h3>
                                 </li>
                                 <li>
                                     <button class="bcolor-blu d-flex j-centre alin-it color-white margin-20 padding-10">Contatta l'ufficio vendite</button>
