--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="content-space d-flex j-centre alin-it border2"><i class="fa-regular fa-user"></i>Team</div>
                     <div class="content-space d-flex j-centre alin-it border2"> <i class="fa-regular fa-building"></i>Azienda</div>
                     <div class="conteiner max-width d-flex j-content  wrap alin-strech open-sansus font-text">
-                        <ul class="border2 content-space1 list-style-none">
+                        <ul class="border2 content-space list-style-none">
                             <li>
                                 <h3 class="content-space1 d-flex alin-it">Professional</h3>
                             </li>
@@ -126,7 +126,7 @@
                                 <div>Cartelle offline su dispositivi mobili</div>
                             </li>
                         </ul>
-                        <ul class="border2 content-space1 list-style-none" >
+                        <ul class="border2 content-space list-style-none" >
                             <li>
                                 <h3 class="content-space1 d-flex alin-it">Advanced</h3>
                             </li>
@@ -179,7 +179,7 @@
                                 <div>Cartelle offline ssu dispositivi mobili</div>
                             </li>
                         </ul>
-                        <ul class="border2 content-space1 list-style-none" >
+                        <ul class="border2 content-space list-style-none" >
                             <li>
                                 <h3 class="content-space1 d-flex alin-it">Enterprise</h3>
                             </li>
@@ -305,7 +305,7 @@
         <div>
             <div class="d-flex j-centre alin-it wrap content1 margin d-top-80 bcolor-black">
                 <div class="conteiner max-width d-flex j-content alin-it wrap open-sansus font-text">
-                    <div class="content1 color-white d-flex j-content alin-it wrap margind-top-80 padding-left-right">
+                    <div class="content1 color-white d-flex j-content alin-it wrap margind-top-80 padding-left-right gap">
                         <ul class="list-style-none padding-top-right-bottom-40">
                             <li class="margin-top-10"><h3>Dropbox</h3></li>
                             <li class="margin-top-10">applicazione</li>
